[package]
name = "os"
version = "0.1.0"
authors = ["hanare <hanare08@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# the profile used for `cargo build`
[profile.dev]

# the profile used for `cargo build --release`
[profile.release]
