[package]
name = "os"
version = "0.1.0"
authors = ["hanare <hanare08@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# the profile used for `cargo build`
[profile.dev]

# the profile used for `cargo build --release`
[profile.release]

[package.metadata.bootimage]

run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-L", "c://Program Files/qemu"]
